# chat

./: .env  Cargo.toml  cliff.toml  deny.toml  test.rest
chat_server/: Cargo.toml  config.yaml
chat_server/keys/: private.pem  public.pem
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs
chat_server/src/models/: mod.rs  user.rs
notify_server/: Cargo.toml
notify_server/src/: lib.rs  main.rs  sse.rs
