[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ={workspace = true, version = "1.0.44"}
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace= true }
chrono = { version = "0.4.38", features = ["serde"] }
serde = {  workspace= true }
serde_yaml = { workspace= true}
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "runtime-tokio-rustls","chrono"] }
thiserror = { workspace= true}
tokio = {  workspace= true }
tracing = { workspace= true}
tracing-subscriber = {  workspace= true}

[dev-dependencies]
sqlx-db-tester = "0.4.2"
