[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ={workspace = true, version = "1.0.44"}
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace= true }
axum-auth = "0.7.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
serde = {  workspace= true }
serde_yaml = { workspace= true}
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "runtime-tokio-rustls","chrono"] }
thiserror = { workspace= true}
tokio = {  workspace= true }
tracing = { workspace= true}
tracing-subscriber = {  workspace= true}

[dev-dependencies]
sqlx-db-tester = "0.4.2"
